<resources>
    <string name="app_name">Pizza</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_notifications">Notifications</string>
    <string name="find_and_get">Find and Get</string>
    <string name="your_best_food">Your best Food</string>
    <string name="most">Find the most delicious food</string>
    <string name="with">with the best quality and free delivery here</string>
    <string name="skip">Skip</string>
    <string name="nevada_us">Nevada, US</string>
    <string name="order_your_food">Order Your Food</string>
    <string name="fast_and_free">Fast and Free</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="burger_emoji">🍔</string>
    <string name="burger">Burger</string>
    <string name="pizza_emoji">🍕</string>
    <string name="sandwich">SandWich</string>
    <string name="sandwich_emoji">🌭</string>
    <string name="_4_8">4.8</string>
    <string name="chicken_burger">Chicken Burger</string>
    <string name="_200_gr_chicken_cheese">200 gr chicken + cheese</string>
    <string name="lettuce_tomato">Lettuce + tomato</string>
    <string name="dollar">$ 22.oo</string>
    <string name="dollar_2">$ 25.00</string>
    <string name="_200_gr_meat_lettuce">200 gr meat + lettuce</string>
    <string name="cheese_onion_tomato">cheese + onion + tomato</string>
    <string name="_41_reviews">(41 Reviews)</string>
    <string name="_1">1</string>
    <string name="size">Size</string>
    <string name="medium">Medium</string>
    <string name="energy">Energy</string>
    <string name="_554_kcal">554 KCal</string>
    <string name="delivery">Delivery</string>
    <string name="_45_min">45 min</string>
    <string name="about">About</string>
    <string name="tv_content_info">Crispy seasoned chicken breast, topped with mandatory melted cheese and piled onto soft rolls with onion, avocado, lettuce, tomato and garlic mayo \n if(ordered).</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>