<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/ll_text"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:src="@drawable/ic_baseline_location_on_24"
            android:background="?android:attr/windowBackground"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nevada_us"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:paddingTop="10dp"
            android:background="?android:attr/windowBackground"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_your_food"
                android:fontFamily="@font/roboto"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_and_free"
                android:fontFamily="@font/roboto"
                android:textSize="30sp"/>
        </LinearLayout>
        
        <ImageView
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="0dp"
            android:src="@drawable/flat"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/order">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:hint="@string/search"
            android:fontFamily="@font/roboto"
            android:background="@drawable/search_background"
            android:autofillHints="name"
            android:inputType="text"/>

        <ImageButton
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/filter"
            android:padding="12dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/filter_background"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ll_search"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>