<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="android.ui.pizza.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_shopping"
            app:destination="@id/navigation_shopping" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="android.ui.pizza.view.shopping.ShoppingFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shopping" >
        <action
            android:id="@+id/action_navigation_shopping_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_shopping_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="android.ui.pizza.view.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_shopping"
            app:destination="@id/navigation_shopping" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/introActivity"
        android:name="android.ui.pizza.view.IntroActivity"
        android:label="activity_intro"
        tools:layout="@layout/activity_intro"/>
    <activity
        android:id="@+id/foodActivity"
        android:name="android.ui.pizza.view.food.FoodActivity"
        android:label="activity_food"
        tools:layout="@layout/activity_food" />
</navigation>